fixed licence and wifi container overflow

--- a/source/public/style/wyliodrin.less
+++ b/source/public/style/wyliodrin.less
@@ -657,7 +657,7 @@ md-menu-item > .md-button, md-option .md-text {font-size:14px !important;}
 md-progress-linear .md-container {background:#e5eef1;}
 md-progress-linear .md-bar{background:#e54225;}
 
-.packages-tabs-box md-tab-content {	background: url('../drawable/loading.gif') no-repeat 50% 50% transparent;}
+.packages-tabs-box md-tab-content {	background: url('../drawable/loading.gif') no-repeat 50% 50% transparent; overflow-x:hidden;}
 .packages-tabs-box md-tab-content > div { background:#fff;}
 
 .pre-box {margin:15px; font-size:11px;}
